added return type definitions for allWoodTypes
